Fixing the main's first section tablet view

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -194,7 +194,7 @@ header{
 @include tablet-view{
     header{
         .navbar-container{
-            padding: 1rem 2rem;
+            padding: 1.2rem 1.3rem;
         }
 
         .hero-section{
@@ -711,6 +711,32 @@ main{
 
                 .about-img{
                     margin-bottom: 1.5rem;
+                }
+            }
+        }
+    }
+}
+
+@include tablet-view{
+    main{
+        padding: 0 1rem;
+
+        .first-section{
+            .about-me{
+                font-size: 2.25rem;
+                margin: 2rem 0;
+            }
+
+            .container-first-section{
+                flex-direction: column;
+                text-align: center;
+
+                .about-img{
+                    margin-bottom: 1.5rem;
+
+                    img{
+                        width: 100%;
+                    }
                 }
             }
         }
